--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <h2>さぁ、あなたもProgateでプログラミングを学んでみませんか？</ h2>
         <h3>コーディングを学び、クリエイティブになることを学びましょう！</ h3>
       </ div>
-      <span class = "btn message">さっそく開発する</ span>
+      <span class = "btn message">さっそく開発するa</ span>
     </ div>
   </ div>
   <フッター>
